@@ -1,3 +1,8 @@
 library(condor)
 library(condor)
 library(condor)
+tmp <- read.csv("/home/user/data/Data/Figure 7 - Clinical Classifier/data_and_envs/CytoDX/fcs_info_train.csv")
+View(tmp)
+View(tmp)
+tmp
+View(tmp)
