@@ -1,7 +1,7 @@
 Package: condor
 Type: Package
 Title: Flow Cytometry data analysis toolbox
-Version: 0.1.3
+Version: 0.1.4
 Author: Lorenzo Bonaguro
 Maintainer: Lorenzo Bonaguro <lorenzobonaguro@uni-bonn.de>
 Description: Flow cytometry analysis workflow. The aim of this project if to 
@@ -40,8 +40,10 @@ Imports:
     randomForest,
     flowWorkspace,
     Biobase,
-    CytoML
-RoxygenNote: 7.1.1
+    CytoML,
+    CytoDx,
+    Hmisc
+RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Suggests: 
     rmarkdown,
