@@ -19,6 +19,7 @@ export(metaclustering)
 export(nfTransform)
 export(plot_density)
 export(plot_marker)
+export(predict_classifier)
 export(predict_labels)
 export(prepFcsFolderData)
 export(prep_fcd)
@@ -33,9 +34,11 @@ export(runUMAP)
 export(runtSNE)
 export(scaleColors)
 export(subset_fcd)
+export(train_classifier_model)
 export(train_transfer_model)
 export(violinplot_marker)
 import(Biobase)
+import(CytoDx)
 import(CytoML)
 import(RColorBrewer)
 import(Rmisc)
@@ -61,3 +64,4 @@ import(stringr)
 import(umap)
 importFrom(Matrix,sparseMatrix)
 importFrom(igraph,membership)
+importFrom(utils,packageDescription)
