@@ -399,11 +399,11 @@ plot_marker(data = cbind(condor$umap$pca_orig, condor$clustering$Phenograph_pca_
             title = "Phenograph Clustering on Normalized expression", 
             dim_red = "UMAP", facet_by_variable = FALSE)
 
-plot_marker(data = cbind(condor$umap$pca_orig, condor$clustering$Phenograph_pca_orig_k_60, condor$anno$cell_anno), 
-            param = "metaclusters", 
-            order = T, 
-            title = "Phenograph Clustering on Normalized expression", 
-            dim_red = "UMAP", facet_by_variable = "group")
+# plot_marker(data = cbind(condor$umap$pca_orig, condor$clustering$Phenograph_pca_orig_k_60, condor$anno$cell_anno), 
+#             param = "metaclusters", 
+#             order = T, 
+#             title = "Phenograph Clustering on Normalized expression", 
+#             dim_red = "UMAP", facet_by_variable = "group")
 
 plot_marker(data = cbind(condor$umap$pca_orig, condor$clustering$Phenograph_pca_orig_k_60, condor$anno$cell_anno), 
             param = "metaclusters", 
@@ -578,8 +578,6 @@ as vector.
 
 * This need to be fixed*
 ```{r}
-debug(filter_fcd)
-
 condor_filter <- filter_fcd(fcdataset = condor,
                             cell_ids = rownames(condor$clustering$Phenograph_pca_orig_k_60[condor$clustering$Phenograph_pca_orig_k_60$metaclusters == "CD4 T", ]))
 ```
